# V2

./: CMakeLists.txt  README.md  v1.0.sln  v1.1.sln  v1.2.sln  v1.5.sln  v2.0.sln
Doxygen_V2.0/html/: _studentas_8cpp.html  annotated.html  class_asmuo-members.html  class_asmuo.html  class_studentas-members.html  classes.html  (+24 more)
html/: annotated.html  class_asmuo-members.html  class_asmuo.html  class_studentas-members.html  class_studentas.html  class_timer-members.html  class_timer.html  classes.html  files.html  hierarchy.html  index.html  laikmatis_8h_source.html  skirstymas_8h_source.html  studentas_8h_source.html  teigiamas_8h_source.html
v1.0/: galutinis.cpp  galutinis.h  isvedimas.cpp  isvedimas.h  ivedimas.cpp  ivedimas.h  listantra.cpp  listpirma.cpp  skirstymas.cpp  skirstymas.h  skirstymasl.cpp  studentas.h  v1.0.cpp  v1.0.vcxproj  v1.0.vcxproj.filters  vectorantra.cpp  vectorpirma.cpp
v1.1/: Studentas.cpp  galutinis.cpp  galutinis.h  generatorius.cpp  generatorius.h  isvedimas.cpp  isvedimas.h  ivedimas.cpp  ivedimas.h  listantra.cpp  listpirma.cpp  skirstymas.cpp  skirstymasl.cpp  studentas.h  teigiamas.h  v1.1.cpp  v1.1.vcxproj  v1.1.vcxproj.filters  vectorantra.cpp  vectorpirma.cpp
v1.2/: Studentas.cpp  laikmatis.h  skirstymas.h  studentas.h  v1.2.cpp  v1.2.vcxproj  v1.2.vcxproj.filters  vectorantra.cpp
v1.5/: studentas.h  teigiamas.cpp  v1.5.cpp  v1.5.vcxproj  v1.5.vcxproj.filters
v2.0/: Studentas.cpp  laikmatis.h  skirstymas.cpp  skirstymas.h  studentas.h  teigiamas.h  v2.0.cpp  v2.0.vcxproj  v2.0.vcxproj.filters  vectorantra.cpp  vectorpirma.cpp
